--- a/src/SoundCardECG/packages.config
+++ b/src/SoundCardECG/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
   <package id="NAudio" version="1.8.5" targetFramework="net461" />
+  <package id="ScottPlot" version="4.0.2" targetFramework="net461" />
+  <package id="ScottPlot.WinForms" version="4.0.2" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.6.0" targetFramework="net461" />
 </packages>
