--- a/src/SoundCardECG/packages.config
+++ b/src/SoundCardECG/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
-  <package id="NAudio" version="1.8.5" targetFramework="net461" />
-  <package id="ScottPlot" version="4.0.2" targetFramework="net461" />
-  <package id="ScottPlot.WinForms" version="4.0.2" targetFramework="net461" />
-  <package id="System.Drawing.Common" version="4.6.0" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.9.0" targetFramework="net472" />
+  <package id="NAudio" version="1.10.0" targetFramework="net472" />
+  <package id="runtime.osx.10.10-x64.CoreCompat.System.Drawing" version="5.8.64" targetFramework="net472" />
+  <package id="ScottPlot" version="4.0.18" targetFramework="net472" />
+  <package id="ScottPlot.WinForms" version="4.0.18" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
 </packages>
